# api-personal-blog

./: .dockerignore  .env.template  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  main.py  pyproject.toml  ruff.toml
.github/workflows/: build-and-push.yml  deploy.yml  lint-pr.yml  manual_workflow.yml  preview-pr.yml  run_test.yml
alembic/: env.py
alembic/versions/: 5ad78344e0c5_add_first_name_middle_name_last_name_.py  5fc4f964ceaf_create_users_table.py  75b39d5a62c4_create_blog_model.py  8635f90eb61a_add_is_admin_column_to_users_table.py  cec58513e780_add_relationship_user_and_blog.py  f3e52bf7850e_aplicar_convención_de_nombres.py
config/: __init__.py  config.py  database.py
scripts/: entrypoint.sh
src/auth/: models.py  repository.py  router.py  schemas.py  service.py  views.py
src/blogs/: models.py  repository.py  router.py  schemas.py  service.py
src/core/: hash.py  jwt.py  models.py  repository.py
src/core/middleware/: auth.py
test/: conftest.py
test/auth/: test_auth_api.py
test/blog/: test_blog_api.py
