[project]
name = "api-personal-blog"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"

authors = [
    {name = "Wilber Alegria", email = "wilber.alegria99@gmail.com"},
]
    

dependencies = [
    "alembic>=1.14.0",
    "niquests>=3.12.3",
    "pwdlib[argon2]>=0.2.1",
    "pydantic-settings>=2.7.0",
    "pyjwt>=2.10.1",
    "robyn>=0.64.2",
    "ruff>=0.8.3",
    "sqlalchemy-libsql>=0.1.0",
]

[dependency-groups]
dev = [
    "faker>=35.0.0",
    "pre-commit>=4.1.0",
    "pytest>=8.3.4",
]

#[tool.pytest.ini_options]
#env_files = [".env.test"]
